@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2007-11-07  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> PerlMagick/t/ttf/read.t: Relax TrueType rendering tests so that
+        they pass with current FreeType built with default settings.
+
+</UL>
+<p>
 2007-11-07  Andy Armstrong  &lt;andy@hexten.net&gt;
 
 <UL>
